# sdd

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  pyproject.toml  spec.md
.claude-plugin/: marketplace.json
.devcontainer/: devcontainer.json  post-create.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/plugin/: marketplace.json
.github/workflows/: RELEASE-PROCESS.md  release.yml
.github/workflows/scripts/: simulate-release.sh
docs/: adr-001-agent-detection.md  plugin-distribution.md
plugins/sdd-workflow/: README.md  plugin.json
plugins/sdd-workflow/.claude-plugin/: plugin.json
plugins/sdd-workflow/agents/: sdd.plan.md  sdd.specify.md  sdd.tasks.md
plugins/sdd-workflow/commands/: sdd.plan.md  sdd.specify.md  sdd.tasks.md
plugins/sdd-workflow/copilot-skills/sdd-feature-workflow/: SKILL.md
plugins/sdd-workflow/docs/: install.md  testing.md
plugins/sdd-workflow/skills/sdd-feature-workflow/: SKILL.md
plugins/sdd-workflow/templates/: plan.md  specification-checklist.md  specification.md  tasks.md
scripts/: sync_plugin_templates.py
src/sdd_cli/: __init__.py  agents.py  cli.py  detect.py  init.py  templates.py
tests/: test_sdd_cli.py  test_sdd_detect.py  test_sdd_init.py  test_sdd_list.py  test_sdd_marketplace.py  test_sdd_plugin_assets.py  test_sdd_template.py
